--- a/intro.qmd
+++ b/intro.qmd
@@ -228,9 +228,9 @@ $$
 \end{equation}
 $$
 
-The random equilibrium strategy will result in 0 against *any* strategy. This means any pure strategy and any combination of strategies including *622* and the opponent playing the random strateg themselves. 
+The random equilibrium strategy will result in 0 against *any* strategy. This means any pure strategy and any combination of strategies including *622* and the opponent playing the random strategy themselves. 
 
-### Exploiting vs. Nash
+### Exploitation compared to Nash
 The equilibrium strategy vs. a pure Rock opponent is a useful illustration of the limitations of playing at equilibrium. The Rock opponent is playing perhaps the worst possible strategy, yet equilibrium is still breaking even against it! 
 
 What's the best that we could do against Rock only? We could play **purely paper**. This is called a **best response** strategy. Any deterministic strategy can be fully exploited. 
@@ -263,3 +263,8 @@ $$
 $$
 
 Playing Paper vs. *622* results in an expected win of 0.4 per game. 
+
+### Playing against equilibrium and non-equilibrium opponents
+We know that in RPS, the equilibrium strategy is 1/3 Rock, 1/3 Paper, 1/3 Scissors. The **support** of the equilibrium is defined as the set of actions that are played with at least some probability. In this case, it's all 3 possible actions. 
+
+As long as you play any strategy in the support, you will have the same payoff against the equilibrium (in this case always breaking even). This means that if you are playing against a combination of equilibrium and non-equilibrium opponents, you could actually ignore the equilibrium opponent since you'll always breakeven against them, and just target the non-equilibrium opponent. 
