--- a/rpsom.qmd
+++ b/rpsom.qmd
@@ -9,8 +9,37 @@ At the heart of opponent modeling is maximizing reward and not getting exploited
 
 While [game theory optimal](intro.qmd#nash-equilibrium) play is an interesting mathematical exercise, it's often not actually the most rewarding strategy in practice, though it is useful to understand as a baseline. 
 
+```{mermaid}
+%%| fig-width: 8
+graph TD
+    B["Level 0: 'I'll just play Rock'"]
+    
+    B --> C["Level 1: 'I think they'll play Rock,<br>so I'll play Paper'"]
+    
+    C --> D["Level 2: 'They expect me to play Paper,<br>so they'll play Scissors,<br>therefore I should play Rock'"]
+    
+    D --> E["Level 3: 'They think I'll play Rock<br>so they'll play Paper,<br>therefore I should play Scissors'"]
+    
+    E --> F["Level 4: 'They think I'll play Scissors<br>so they'll play Rock,<br>therefore I should play Paper'"]
+    
+    F --> H["Level 5: 'They think I'll play Paper<br>so they'll play Scissors,<br>therefore I should play Rock'"]
+    
+    H --> I["Level 6: 'They think I'll play Rock<br>so they'll play Paper,<br>therefore I should play Scissors'"]
+    
+    I --> G[". . ."]
+    
+    style B fill:#ffcccc,stroke:#666
+    style C fill:#cce5ff,stroke:#666
+    style D fill:#ffcccc,stroke:#666
+    style E fill:#d4edda,stroke:#666
+    style F fill:#cce5ff,stroke:#666
+    style H fill:#ffcccc,stroke:#666
+    style I fill:#d4edda,stroke:#666
+    style G fill:#f9f9f9,stroke:#666
+```
+
 ## Axes of opponent modeling
-There are two main axes for opponent modeling: opponents and games. 
+There are a few main axes for opponent modeling in games.  
 
 ### Types of opponents 
 Here are a few types of opponents and an example for each. 
@@ -31,11 +60,32 @@ Here are a few types of opponents and an example for each.
 
 **Simple dynamic related to entire history of actions:** Play the move that beats the most frequent opponent move so far
 
-**Dynamic with randomness:** An agent that 
-
-**Agent that switches its main strategy:** An agent that plays all Rock for the first 20 games and then all Scissors for the next 20 games and then plays the move that beats the most frequent opponent move so far
+**Dynamic with randomness:** An agent that randomly selects between multiple dynamic or static strategies. For example: An agent that plays all Rock for the first 20 games and then all Scissors for the next 20 games and then plays the move that beats the most frequent opponent move so far.  
 
 **Advanced dynamic related to entire history of actions:** Sophisticated adversarial prediction algorithm or set of algorithms
+
+### Human play vs. bot play
+Building bots is an exercise in meta-strategies, while playing as a human is more of a psychological battle, combining pattern recognition with adaptive thinking.
+
+Regardless of facing a bot or human, the overall goal remains to maximize payoffs by taking advantage of opponent weaknesses and minimizing your own exploitability. 
+
+**Bot vs. human:** 
+Humans tend to be predictably irrational. This can manifest itself as someone having favorite preferred moves, making "tilted" decisions, reacting to previous games in predictable ways, or having "leaks" like never throwing the same move three times in a row. 
+
+Bots playing against humans should focus on detecting and exploiting these kinds of cognitive biases and patterns. 
+
+**Bot vs. bot:** 
+In RPS, single bot vs. single bot is generally less interesting because playing the Nash equilibrium is so simple.  
+
+We use combinations of suboptimal bots in our challenge games to reinforce thinking strategically about how to respond to opponents. 
+
+**Human vs. human:** 
+This is a very psychological game! "Leveling" is common in human vs. human play. Maybe you think your opponent expects you to play Rock, so then you expect that they'll play Paper, so you should play Scissors, but maybe they'll realize this and play Rock to counter the Scissors, so you should actually play Paper, and so on.
+
+Success comes from maintaining unpredictability while picking up on opponents' patterns and emotional states.
+
+**Human vs. bot:**
+When humans play against adversarial bots, they need to avoid falling into predictable patterns (not that easy!). 
 
 ### Types of games/knowledge
 
@@ -44,24 +94,6 @@ Here are a few types of opponents and an example for each.
 - Play a single unknown opponent
 - Play multiple unknown opponents
 - [Play multiple unknown opponents that include some suboptimal house bots and some human-created bots](rpsbotchallenge.qmd)
-
-### Human play vs. bot play
-
-
-**Human vs. bot:**
-
-**Bot vs. human:** 
-
-**Bot vs. bot:** 
-
-**Human vs. human:** 
-
-We use suboptimal bots in our challenge games to reinforce thinking strategically about how to respond to opponents. The overall goal is to maximize payoffs, which means discovering and taking advantage of opponent weaknesses while minimizing your own exploitability. 
-
-
-Humans tend to be predictably irrational. This can manifest itself as someone having favorite preferred moves, making "tilted" decisions, reacting to previous games in predictable ways, or having "leaks" like never throwing the same move three times in a row. 
-
-There can be levels to the game -- maybe you think your opponent expects you to play Rock, so then you expect that they'll play Paper, so you should play Scissors, but maybe they'll realize this and play Rock to counter the Scissors, so you should actually play Paper, and so on. 
 
 ## Measuring performance
 There are a few main ways to measure performance in games: 
