--- a/rpsomc.qmd
+++ b/rpsomc.qmd
@@ -1,5 +1,5 @@
 ---
-title: "RPS.bot: Intro to Opponent Modeling in Code"
+title: "RPS.bot: Opponent Modeling Starter Code"
 bread-crumbs: false
 format:
   html:
